--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,21 @@
-body {
+* {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  overflow-y: auto;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(194, 175, 175);
+  min-height: 100vh;
 }
 
 code {
