--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
 
 html {
   overflow-y: auto;
+  background-color: rgb(31, 31, 31);
 }
 
 body {
@@ -14,8 +15,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(194, 175, 175);
   min-height: 100vh;
+  width: 80%;
+  background-color: rgb(62, 62, 62);
+  margin: auto;
 }
 
 code {
