--- a/src/styles/CardContainer.scss
+++ b/src/styles/CardContainer.scss
@@ -1,8 +1,10 @@
 .card-container {
   padding-top: 2rem;
+  height: 40vh;
 }
 
 .hand-container {
   margin: auto;
   width: 70%;
+  padding: 0 1rem;
 }
