Update UI to render different numbers of cards based on dropdown input and highlight individual hands

--- a/src/styles/CardContainer.scss
+++ b/src/styles/CardContainer.scss
@@ -1,9 +1,12 @@
 .card-container {
   padding-top: 2rem;
+  color: white;
 }
 
 .hand-container {
   margin: auto;
   width: 70%;
-  padding: 0 1rem;
+  padding: 0 3rem;
+  
+  border: solid 4px rgb(26, 26, 26);
 }
