--- a/src/styles/CardContainer.scss
+++ b/src/styles/CardContainer.scss
@@ -1,12 +1,13 @@
 .card-container {
   padding: 3rem 0;
   color: white;
+  text-align: center;
 }
 
 .hand-container {
   margin: auto;
   width: 65%;
   padding: 0 5rem;
-  
+  border-radius: 10px;  
   border: solid 4px rgb(26, 26, 26);
 }
