Increase error and empty message sizing

--- a/src/styles/CardContainer.scss
+++ b/src/styles/CardContainer.scss
@@ -2,6 +2,11 @@
   padding: 3rem 0;
   color: white;
   text-align: center;
+
+  .empty-state {
+    width: 50%;
+    margin: 15% auto;
+  }
 }
 
 .hand-container {
