--- a/src/styles/CardContainer.scss
+++ b/src/styles/CardContainer.scss
@@ -1,3 +1,5 @@
+@import '../styles/variables.scss';
+
 .card-container {
   padding: 3rem 0;
   color: white;
@@ -15,4 +17,16 @@
   padding: 0 1rem;
   border-radius: 10px;  
   border: solid 4px rgb(26, 26, 26);
+}
+
+@media (min-width: $tablet-min) and (max-width: $tablet-max) {
+  .hand-container {
+    padding: 0;
+  }
+}
+
+@media only screen and (max-width: $mobile) {
+  .card-container {
+    padding: 0;
+  }
 }
