--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -1,3 +1,5 @@
+@import '../styles/variables.scss';
+
 .nav-bar {
   background-color: rgb(62, 62, 62);
   color: white;
@@ -5,5 +7,22 @@
   
   h1 {
     font-size: 3rem;
+  }
+}
+
+@media (min-width: $tablet-min) and (max-width: $tablet-max) {
+  .nav-bar {
+    h1 {
+      font-size: 2rem;
+    }
+  }
+}
+
+@media only screen and (max-width: $mobile) {
+  .nav-bar {
+    h1 {
+      font-size: 1rem;
+      text-align: center;
+    }
   }
 }
