Adjust title sizes at different breakpoints, add responsive styles to elements

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+
 //media query breakpoints
 $mobile: 375px;
 $tablet-max: 1024px;
 $tablet-min: 768px;
+
+//typeface
+$main-font: 'Josefin Sans', sans-serif;
